[package]
name = "acp"
version = "0.1.0"
authors = ["Andrew Stefanich <andrewstefanich@gmail.com>"]
edition = "2018"
description = "andrew_control_protocol (acp): a simple reliability layer over UDP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
rand = "0.7.3"
backtrace = "0.3"
